@@ -1,5 +1,10 @@
 Changes with APR b1
 
+  *) All dso implementations now register a cleanup to unload the DSO
+     when it is loaded.  If the pool is removed, we really do need to
+     remove the DSO.  In the past, different platforms behaved differently
+     it this respect.  [Ryan Bloom]
+
   *) Add linkage declarations to the DSO code.
      [Gregory Nicholls <gnicholls@level8.com>]
 
